%changelog
* Tue Oct 27 2020 Satoe Imaishi <simaishi@redhat.com> - 12.0.0-1
- master branch build