@@ -1,41 +1,0 @@
-[manageiq-12-lasker]
-name=ManageIQ 12 (Lasker) Release- $basearch
-baseurl=https://rpm.manageiq.org/release/12-lasker/el$releasever/$basearch
-enabled=1
-gpgcheck=0
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
-
-[manageiq-12-lasker-noarch]
-name=ManageIQ 12 (Lasker) Release- noarch
-baseurl=https://rpm.manageiq.org/release/12-lasker/el$releasever/noarch
-enabled=1
-gpgcheck=0
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
-
-[manageiq-12-lasker-source]
-name=ManageIQ 12 (Lasker) Release- source
-baseurl=https://rpm.manageiq.org/release/12-lasker/el$releasever/src
-enabled=0
-gpgcheck=0
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
-
-[manageiq-12-lasker-nightly]
-name=ManageIQ 12 (Lasker) Nightly- $basearch
-baseurl=https://rpm.manageiq.org/release/12-lasker-nightly/el$releasever/$basearch
-enabled=0
-gpgcheck=0
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
-
-[manageiq-12-lasker-nightly-noarch]
-name=ManageIQ 12 (Lasker) Nightly- noarch
-baseurl=https://rpm.manageiq.org/release/12-lasker-nightly/el$releasever/noarch
-enabled=0
-gpgcheck=0
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
-
-[manageiq-12-lasker-nightly-source]
-name=ManageIQ 12 (Lasker) Nightly- source
-baseurl=https://rpm.manageiq.org/release/12-lasker-nightly/el$releasever/src
-enabled=0
-gpgcheck=0
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
