@@ -1,11 +1,11 @@
 Name:      manageiq-release
-Version:   12.0
+Version:   13.0
 Release:   1%{dist}
 Summary:   ManageIQ RPM repository configuration
 License:   Apache-2.0
 URL:       https://rpm.manageiq.org/release/
 Source0:   RPM-GPG-KEY-MANAGEIQ
-Source1:   manageiq-12-lasker.repo
+Source1:   manageiq-13-morphy.repo
 BuildArch: noarch
 
 %description
@@ -36,6 +36,9 @@ rm -rf $RPM_BUILD_ROOT
 /etc/pki/rpm-gpg/*
 
 %changelog
+* Mon Feb 22 2021 Jason Frey <fryguy9@gmail.com> - 13.0-1%{dist}
+- Initial build of manageiq-release for Morphy.
+
 * Tue Oct 27 2020 Satoe Imaishi <simaishi@redhat.com> - 12.0-1%{dist}
 - Initial build of manageiq-release for Lasker.
 
